# genkan

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md  pr-title-checker-config.json  release-drafter.yml
.github/workflows/: ci.yml  pr-title-check.yml  publish.yml  release.yml
src/: config.rs  generator.rs  lib.rs  main.rs
tests/: config_tests.rs  generator_tests.rs
themes/doodle/: script.js  style.css
themes/simple/: script.js  style.css  template.html
